--- a/src/css/LinkButton.scss
+++ b/src/css/LinkButton.scss
@@ -1,14 +1,14 @@
 
 .linkButtonContainer {
   display: flex;
-  background-color: var(--gt-panel-color);
+  // background-color: var(--gt-panel-color);
   height: var(--gt-row-height);
-  margin-left: 0.5rem;
+  // margin-left: 0.5rem;
   border-radius: var(--gt-border-radius);
 
 }
 
 .linkButton {
   padding: 1rem;
-  font-weight: 400;
+  // font-weight: bold;
 }
