--- a/src/css/CardItem.css
+++ b/src/css/CardItem.css
@@ -135,3 +135,20 @@
   align-self: center;
   font-size: var(--gt-rating-font-size);
 } 
+
+.fade-in {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 0.1s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
