--- a/src/css/SearchPageContent.scss
+++ b/src/css/SearchPageContent.scss
@@ -4,7 +4,13 @@
   max-width: 100%;
 }
 
-#resultsList {
-  margin: 0px;
+#listContent {
+  margin: auto;
+  max-width: 768px;
 }
+
+#inputSection {
+
+}
+ 
  
