--- a/src/css/SearchPageContent.scss
+++ b/src/css/SearchPageContent.scss
@@ -1,8 +1,9 @@
-#pageRoot {
+#sp-pageRoot {
   // background-color: var(--gt-panel-color);
   overflow-x: hidden;
-  margin: auto;
-  max-width: 840px;
+
+  // max-width: 840px;
+
 
   // -ms-overflow-style: none;  /* IE and Edge */
   // scrollbar-width: none;  /* Firefox */
