--- a/src/css/SearchPageContent.scss
+++ b/src/css/SearchPageContent.scss
@@ -1,8 +1,8 @@
 #sp-pageRoot {
   // background-color: var(--gt-panel-color);
   overflow-x: hidden;
-
-  // max-width: 840px;
+  margin: auto;
+  max-width: 840px;
 
 
   // -ms-overflow-style: none;  /* IE and Edge */
