--- a/src/css/FilterTags.css
+++ b/src/css/FilterTags.css
@@ -15,8 +15,7 @@
 }
 
 #topContainer {
-  margin: 0.5rem;
-  margin-bottom: 0;
+  margin: 0.5rem 0.5rem 0 0.5rem;
 }
 
 /* #tagsList::-webkit-scrollbar{
