--- a/src/css/DonatePage.css
+++ b/src/css/DonatePage.css
@@ -35,22 +35,21 @@
 }
 
 #bmacButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-      border-radius: 42px;
-    padding: 0 1.5rem 0 1.5rem;
-    font-weight: 600;
-    height: 38px;
-    margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 42px;
+  padding: 0 1.5rem 0 1.5rem;
+  font-weight: 600;
+  height: 38px;
+  margin-bottom: 3.5rem;
 }
 
 #bmacLogo {
-    /* padding-right: 0.75rem; */
-    border-radius: 42px;
-    height: 50px;
-  }
-  
+  /* padding-right: 0.75rem; */
+  border-radius: 42px;
+  height: 60px;
+}
 
 #bitcoinLogo {
   height: 20px;
@@ -60,20 +59,17 @@
 }
 
 #nanoButton {
-  margin-top: 0rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  align-content: center;
-  height: 30px;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 52, 0.9);
   border-radius: 42px;
-  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
-  font-weight: 600;
+  padding: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 #nanoLogo {
-  height: 16px;
+  height: 12px;
 }
 
 #donateButtons {
