--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -7,7 +7,7 @@
   --gt-primary-font-size: calc(var(--f7-font-size));
   --gt-secondary-font-size: calc(0.75 * var(--f7-font-size));
   --gt-mini-font-size: calc(0.65 * var(--f7-font-size));
-  --gt-rating-font-size: calc(1.0 * var(--f7-font-size));
+  --gt-rating-font-size: calc(1 * var(--f7-font-size));
 
   --gt-secondary-font-color-rgb: 125, 125, 125;
   --gt-secondary-font-color: rgb(var(--gt-secondary-font-color-rgb));
@@ -28,7 +28,7 @@
 
   // --f7-list-bg-color: rgba(0,0,0,0);
 
-//   --f7-panel-backdrop-bg-color: rgba(0, 0, 0, 0.3);
+  //   --f7-panel-backdrop-bg-color: rgba(0, 0, 0, 0.3);
 }
 
 .color-theme-blue {
@@ -40,7 +40,7 @@
 }
 
 .color-theme-orange {
-  --f7-theme-color: #E67E22;
+  --f7-theme-color: #e67e22;
   --f7-theme-color-rgb: 230, 126, 34;
   --f7-theme-color-shade: #c0600d;
   --f7-theme-color-tint: #ff963a;
@@ -57,8 +57,7 @@ body {
 html {
   display: flex;
   justify-content: center;
-  background-color: rgb(175,182,189);
-
+  background-color: rgb(175, 182, 189);
 }
 
 // $mb-font: "Helvetica";
@@ -66,8 +65,8 @@ html {
 
 body {
   max-width: 1280px;
-//   font-family: $mb-font;
-  box-shadow: 0 0 64px rgba(0,0,0,0.3);
+  //   font-family: $mb-font;
+  box-shadow: 0 0 64px rgba(0, 0, 0, 0.3);
 }
 
 .button {
@@ -76,7 +75,7 @@ body {
 
 .popover-backdrop {
   transition-duration: 200ms;
-  background-color: rgba(0,0,0,0.15);
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 .ios,
@@ -117,33 +116,35 @@ body {
 //   border-radius: 6px;
 // }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   background-color: transparent;
   width: 12px;
   // border-left: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0,0,0,0.05);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   border: 3px solid rgba(0, 0, 0, 0);
-  background-clip: padding-box; 
+  background-clip: padding-box;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.175);
 }
 
-
-
 #marcobotRightPanel {
-  border-left: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0,0,0,0.125);
+  border-left: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0, 0, 0, 0.125);
   // box-shadow: 0 0 64px rgba(0,0,0,0.1);
-  ::-webkit-scrollbar{
-    border-left: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0,0,0,0.125);
+  ::-webkit-scrollbar {
+    border-left: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0, 0, 0, 0.125);
   }
 }
 
-
 #marcobotLeftPanel {
-  border-right: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0,0,0,0.125);
+  border-right: calc(1px / var(--f7-device-pixel-ratio)) solid rgba(0, 0, 0, 0.125);
   // box-shadow: 0 0 64px rgba(0,0,0,0.1);
+}
+
+@font-face {
+  font-family: "Vectrex";
+  src: local("Vectrex"), url(../fonts/Vectrex.ttf) format("truetype");
 }
 
 // const effects = [
